--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: web_convenient_view
 description: For simplifying having a view be reloaded in a web browser when data needs to be passed
 version: 1.0.0
-homepage:
+homepage: https://github.com/Honeyman-Applications/web_convenient_view
+repository: https://github.com/Honeyman-Applications/web_convenient_view
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
